Fix builds